tests/machine/x/pascal/cross_join_triple.error
line: 48
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/cross_join_triple.pas
cross_join_triple.pas(45,17) Error: identifier idents no member "n"
cross_join_triple.pas(45,27) Error: identifier idents no member "l"
cross_join_triple.pas(45,37) Error: identifier idents no member "b"
cross_join_triple.pas(48) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

